<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/surname"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_view_surname"
            android:layout_weight="1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/surname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_view_name"
            android:layout_weight="1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_view_father_name"
            android:layout_weight="1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/father_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/edit_view_age"
            android:layout_weight="1"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/age"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_view_hobby"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/hobby"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>